--- a/index.html
+++ b/index.html
@@ -14,49 +14,56 @@
       font-family: 'Inter', sans-serif;
     }
     body {
-      background: #ffffff;
-      color: #333;
+      background: #0b0f2b;
+      color: #fff;
       line-height: 1.6;
     }
     header {
-      background: #0f62fe;
+      background: #1c223d;
       color: white;
-      padding: 2rem 1rem;
+      padding: 3rem 1rem 2rem;
       text-align: center;
       position: relative;
     }
     .logo {
-      position: absolute;
-      top: 1rem;
-      left: 1rem;
+      text-align: center;
+      margin-bottom: 1.5rem;
     }
     .logo img {
-      height: 40px;
+      height: 120px;
+      border-radius: 12px;
     }
     header h1 {
       font-size: 2rem;
+      color: #ffdc60;
     }
     header p {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
+      font-size: 1.1rem;
+      margin-top: 0.75rem;
+      color: #ccc;
     }
     .cta-buttons {
-      margin-top: 1rem;
+      margin-top: 1.5rem;
     }
     .cta-buttons a {
       text-decoration: none;
-      background: white;
-      color: #0f62fe;
+      background: #ffdc60;
+      color: #1c223d;
       padding: 0.75rem 1.5rem;
       margin: 0.5rem;
-      border-radius: 5px;
-      font-weight: 600;
+      border-radius: 8px;
+      font-weight: 700;
       display: inline-block;
     }
     section {
       padding: 3rem 1rem;
       max-width: 1200px;
       margin: auto;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 2rem;
+      color: #ffdc60;
     }
     .features, .pricing, .testimonials {
       display: flex;
@@ -66,29 +73,32 @@
     }
     .feature, .plan, .testimonial {
       flex: 1 1 250px;
-      background: #f4f4f4;
+      background: #1e2647;
       padding: 1.5rem;
-      border-radius: 8px;
+      border-radius: 10px;
+      color: #fff;
     }
     .feature h3, .plan h3, .testimonial h3 {
       margin-bottom: 0.75rem;
+      color: #ffdc60;
     }
     .plan strong {
       font-size: 1.5rem;
       display: block;
       margin: 0.5rem 0;
+      color: #fff;
     }
     .testimonial p {
       font-style: italic;
     }
     footer {
-      background: #333;
-      color: #fff;
+      background: #101528;
+      color: #999;
       text-align: center;
       padding: 2rem 1rem;
     }
     footer a {
-      color: white;
+      color: #ffdc60;
       text-decoration: underline;
     }
     @media (max-width: 768px) {
@@ -99,18 +109,13 @@
         flex-direction: column;
         align-items: center;
       }
-      .logo {
-        position: static;
-        text-align: center;
-        margin-bottom: 1rem;
-      }
     }
   </style>
 </head>
 <body>
   <header>
     <div class="logo">
-      <img src="/logo.png" alt="KeepMyCells Logo" />
+      <img src="/logo.jpg" alt="KeepMyCells Logo" />
     </div>
     <h1>Preserve Your Stem Cells Today — Protect Your Health Tomorrow</h1>
     <p>Your future deserves a backup plan. Easily collect and store your stem cells with licensed professionals and FDA-compliant labs.</p>
@@ -121,7 +126,7 @@
   </header>
 
   <section id="why">
-    <h2 style="text-align:center; margin-bottom:2rem;">Why Keep Your Cells?</h2>
+    <h2>Why Keep Your Cells?</h2>
     <div class="features">
       <div class="feature">
         <h3>🧠 Anti-Aging Treatments</h3>
@@ -143,7 +148,7 @@
   </section>
 
   <section id="how">
-    <h2 style="text-align:center; margin-bottom:2rem;">How It Works</h2>
+    <h2>How It Works</h2>
     <div class="features">
       <div class="feature">
         <h3>1. Book Your Collection</h3>
@@ -165,7 +170,7 @@
   </section>
 
   <section class="pricing">
-    <h2 style="text-align:center; margin-bottom:2rem;">Plans & Pricing</h2>
+    <h2>Plans & Pricing</h2>
     <div class="features">
       <div class="plan">
         <h3>Starter</h3>
@@ -186,7 +191,7 @@
   </section>
 
   <section class="testimonials">
-    <h2 style="text-align:center; margin-bottom:2rem;">Real People. Real Impact.</h2>
+    <h2>Real People. Real Impact.</h2>
     <div class="features">
       <div class="testimonial">
         <p>“I stored my son’s stem cells at birth. It gave us peace of mind — and I’d do it again in a heartbeat.”</p>
